fix: adjust spacing to optimize vertical area for gameboard

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -21,8 +21,8 @@
   .gamescreen {
     flex-direction: column;
     align-items: center;
-    padding: 2rem;
-    gap: 2rem;
+    padding: 1.2rem;
+    gap: 0.5rem;
   }
 
   .startscreen {
